--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "leave-api",
+  "version": "0.0.0",
+  "description": "leaveApi",
   "scripts": {
-    "start": "json-server -p 3001 -w db.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server"
   },
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": "~6.10.x"
+  },
+  "author": {
+    "name": ""
+  },
   "dependencies": {
     "express": "^4.16.4",
     "json-server": "^0.14.2"
